# ai-token-usage-dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai-token-usage.example.json  ai_token_usage.py  codex_token_usage.py  prices.example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: test_usage_logic.py
