[project]
name = "ai-token-usage"
version = "0.1.0"
description = "Privacy-preserving local AI token usage dashboard for Codex, OpenCode, Claude Code, and Hermes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AI Token Usage contributors" }]
keywords = ["ai", "tokens", "codex", "opencode", "claude", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wvv599/ai-token-usage-dashboard"
Issues = "https://github.com/wvv599/ai-token-usage-dashboard/issues"

[project.scripts]
ai-token-usage = "ai_token_usage:main"

[tool.setuptools]
py-modules = ["ai_token_usage"]

[tool.ruff]
line-length = 120
target-version = "py310"
